# Plugin_CodeEditor

./: Cargo.toml  README.md
src/: lib.rs
src/script_editor/: autocomplete_integration.rs  file_explorer.rs  mod.rs  text_editor.rs  workspace_panels.rs
