[package]
name = "script_editor_plugin"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "script_editor_plugin"

[dependencies]
# Plugin API
plugin_editor_api = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }

# UI dependencies
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "313b82eb92887e6c9c2e92a9ff266ffdcd3ae1d5" }
ui      = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI-Component", rev = "b43b1cca194b591f079d1b2a9b50bb68b55d67a3" }
ui_common       = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }
ui_types_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }

# Engine dependencies
engine_state  = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }
engine_backend     = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
log = "0.4"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Async operations
futures = "0.3"

# Diff utilities
similar = "2.2"

# JSON schema derive
schemars = { version = "1.2", features = ["derive"] }
