[package]
name = "script_editor_plugin"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "script_editor_plugin"

[dependencies]
# Plugin API
plugin_editor_api = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }

# UI dependencies
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "98e312efa8601b1244215c79aac88acb5e169e03" }
ui      = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI-Component", rev = "ccbab31e4e2364ef52efcb61c98c37a5d8cc79e1", features = ["tree-sitter-languages"] }
ui_common       = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }
ui_types_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }

# Engine dependencies
engine_state  = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }
engine_backend     = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "f91bbba2b90ebad0afa6b9940ecd52da0430e326" }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
log = "0.4"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Async operations
futures = "0.3"

# Diff utilities
similar = "2.2"

# JSON schema derive
schemars = { version = "1.2", features = ["derive"] }
